--- a/AlexanderSchou.html
+++ b/AlexanderSchou.html
@@ -35,6 +35,7 @@
 <ul>
     <li><a href="https://www.linkedin.com/in/alexander-schou-259575197" target="_blank">LinkedIn</a></li>
     <li><a href="https://www.youtube.com/@alexanderschou9273" target="_blank">YouTube</a></li>
+    <li><a href="https://github.com/alexanderschou96" target="_blank">GitHub</a></li>
 </ul>
 
 </body>
